# personality_ai

./: .gitignore  README.md  base.py  base_test.ipynb  generate_identity.py  generate_persona.py  hooks.py  pyproject.toml  umap.ipynb
personality_ai/: ump.py
personality_ai/activations/: base.py  tf_lens.py
personality_ai/dataset/: generate_identity.py
personality_ai/interpretation/: clusters.csv  clusters2.csv  dimensionality_reduction.py  distance.py  explanation.py  umap.ipynb
