[tool.poetry]
name = "personality-ai"
version = "0.1.0"
description = "Package for investigating persona representations in LLMs"
authors = ["Matthieu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.44.2"
pandas = "^2.2.2"
umap-learn = "^0.5.6"
transformer-lens = "^2.4.0"
torch = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
